refactor: use records, other language features